--- a/assignments/a1.tex
+++ b/assignments/a1.tex
@@ -12,7 +12,7 @@
 \usepackage{parskip}
 \usepackage{amssymb}
 \usepackage{hyperref}
-\author{Nan Wang}
+\author{Nan Wang\\30566426}
 % Use one or the other of these for displaying code.w
 % NOTE: If you get
 %  ! Package minted Error: You must invoke LaTeX with the -shell-escape flag.
