--- a/assignments/a1.tex
+++ b/assignments/a1.tex
@@ -205,7 +205,7 @@
   \ans{False}
   \item $x^TAy = y^TA^Tx$.
   %
-  \ans{False}
+  \ans{True}
   \item $A^TA = AA^T$ if $A$ is a symmetric matrix.
   %
   \ans{True}
@@ -259,7 +259,7 @@
   \begin{enumerate}
   \item What is the probability that a random person would test positive, $P(T=1)$?
   \begin{answer}
-    0.0100087
+    0.010096
   \end{answer}
   \item In the above, do most of these positive tests come from true positives or from false positives?
   %
@@ -268,7 +268,7 @@
   \end{answer}
   \item What is the probability that a random person who tests positive is a user, $P(D=1 \mid T=1)$?
   \begin{answer}
-    0.00096916
+    Approximately 0.0096
   \end{answer}
   \item Suppose you have given this test to a random person and it came back positive, are they likely to be a drug user?
   %
@@ -278,7 +278,7 @@
   \item Suppose you are the designer of this drug test. You may change how the test is conducted, which may influence factors like false positive rate, false negative rate, and the number of samples collected. What is one factor you could change to make this a more useful test?
   %
   \begin{answer}
-    False positive rate
+    Decrease false positive rate
   \end{answer}
   \end{enumerate}
 
@@ -336,7 +336,7 @@
   \item $f(x) = a^Tx + b$ where $x \in \R^3$ and $a \in \R^3$ and $b \in \R$.
   %
   \begin{answer}
-    $a^T$
+    $a$
   \end{answer}
   \item $f(x) = \frac12 x^\top A x$ where $A=\left[ \begin{array}{cc}
   2 & -1 \\
